2010-05-06 Max Derhak
 * Modified IccProfLibConf.h and IccConvertUTF.h to properly define 32 bit types for 64 bit
   compilers
 * Added IccProfLibVer.h to define macro that has version for IccProfLib

2010-04-28 Rohit Patil
 * Modified IccProfLibTest to allow modification of ProfileDescription and Copyright tags

2010-03-12 Max Derhak
 * Added support for PrintConditions tag implemented using Dictionary tag type

2009-01-22 Rohit Patil/Max Derhak
 * Added CIccCreateXformHintManager to allow for a list of hint object to be passed
   in at the time of CIccXform creation.
 * Modified PCS adjustment to use a scale and offset in new function CIccXform::AdjustPCS().
   CIccXform::CheckSrcAbs and CIccXform::CheckDestAbs now use CIccXform::AdjustPCS()
 * Hint mechanism can now be used to set up scale and offset values.
 * Added CIccApplyBPCHint and CIccApplyBPC classes in IccApplyBPC.cpp and IccApplyBPC.h
   to provide optional support for Adobe Black Point Compensation
   - Since BPC is outside the scope of the ICC specifiction, users of CIccXform::Create
     must define and use a CIccApplyBPCHint object to enable BPC processing.
   - CIccApplyBPC temporarily instantiates a CIccCmm for the purpose of finding the black point
     of a profile.
   - Black point processing between two profiles is performed in two steps.  The first profile's
     black point is mapped to the V4 perceptual black point.  The second profile maps from the
	 V4 perceptual black point to the second profile's black point.  This allows BPC processing
	 to be performed on a single profile.
 * iccApplyNamedCMM.cpp modified to support BPC using CIccApplyBPC
 * Added CIccProfile::ReadTags() to force all tags to be loaded into memory. (Used by CIccApplyBPC)
 * CIccTagMultiLocalizedUnicode::Read() now seeks to the end of the last record at end of the function
 * Added ICC_CBRTF macro that can allow for substitution of cbrtf() function if it is available